fixing z-index

--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -81,7 +81,7 @@
   bottom: 15px;
   left: 25px;
   overflow: hidden;
-  z-index: 2;
+  z-index: 1;
 
   &.open {
     display: block;
