--- a/src/sass/partials/_modal-video.scss
+++ b/src/sass/partials/_modal-video.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 20;
+  z-index: 1;
   background-color: #000c;
   width: 100vw;
   height: 100vh;
